--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
   "dependencies": {
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.1",
-    "@microsoft/eslint-plugin-power-apps": "^0.2.51",
-    "@types/node": "^18.19.86",
-    "@types/powerapps-component-framework": "^1.3.16",
-    "eslint-plugin-promise": "^7.1.0",
-    "globals": "^15.15.0",
+    "@microsoft/eslint-plugin-power-apps": "^0.2.33",
+    "@types/node": "^18.19.31",
+    "@types/powerapps-component-framework": "^1.3.11",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.31.0"
+    "typescript": "^4.9.5"
   }
 }
